<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizGame</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="title_activity_in_game">inGame</string>
    <string name="title_activity_game_over">gameOver</string>
    <string name="playAgain">Play Again</string>
    <string name="menu">Go to menu</string>
    <string name="title_activity_send_new_question">SendNewQuestion</string>
    <string name="question">Question</string>
    <string name="trueAnswer">Correct Answer</string>
    <string name="secondAnswer">Second Answer</string>
    <string name="thirdAnser">Third Answer</string>
    <string name="Send">Send</string>
    <string name="SendNew">Send a question</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>

</resources>
