<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/linearBtnPlay"
        android:gravity="center"
        android:background="#FFF"
        android:weightSum="1">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/appName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <Button
            android:background="@drawable/flat_selector"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/btnPlay"
            android:text="@string/play"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="false"
            android:textColor="#FFF"
            android:textSize="19sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="70dp" />

        <Button
            android:background="@drawable/flat_selector"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/sendNew"
            android:text="@string/SendNew"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="false"
            android:textColor="#FFF"
            android:textSize="19sp" />
    </LinearLayout>


</LinearLayout>